# art-python

./: .gitignore  AGENTS.md  CASE_STUDIES.md  CHANGELOG.md  PLAN.md  README.md  TODO.md  demo_chile_ipc.py  llms.txt  pyproject.toml
.github/workflows/: publish-art.yml  publish-atsw.yml
atsw-suite/: README.md  pyproject.toml
atws-suite/: README.md  pyproject.toml
bugs/: BUG-0001-mu-collapse-rescale.md  BUG-0002-over-differencing-kpss.md  BUG-0003-display-tools-no-persist.md  BUG-0004-ar-factorization-standard-errors.md  BUG-0005-nyquist-added-when-no-harmonics.md  BUG-0006-seasonal-ar-init-spurious-optimum.md  BUG-0007-update-and-forecast-rebuilds-the-model-without-r.md  BUG-0008-forecast-table-builds-the-95-band-as-level-1-96-.md  README.md  TEMPLATE.md
bugs/BUG-0006-repro/: US_CPI.pre  repro.py
bugs/BUG-0007-repro/: FR_CPI.fuf.inp  repro.py
cases/IPC_DE/: IPC_DE_2019.inp  IPC_DE_forecast.html  IPC_DE_forecast_AR.html  IPC_DE_model.fuf.inp  IPC_DE_model.inp  IPC_DE_model_AR.fuf.inp  IPC_DE_model_AR.inp  IPC_DE_validation.html  IPC_DE_validation_AR.html
cases/IPC_ES/: CHANGELOG.md  IPC_ES_forecast.html  IPC_ES_forecast_r1.html  IPC_ES_m00.pre  IPC_ES_m01.pre  IPC_ES_m02.inp  IPC_ES_m02.pre
docs/: ANNOUNCEMENT.md  ARCHITECTURE.md  PUBLISHING.md  QUICKSTART.md  RESCALING_ARCHITECTURE.md  STATUS.md  TOOLS.md  email_final.md
research/sf_meg/: README.md  aggregate.py  aggregate_n.py  crit_table.json  dcd_mc.py  deterministic_effect.py  final_table.py  power_comparison.py  power_study.py  run_det_pooled.py  shinfuller_ar1.py  shinfuller_arf.py  shinfuller_asymptotics.py  shinfuller_closedform.py  shinfuller_closedform_final.py  shinfuller_crit_table.py  shinfuller_evenodd.py  shinfuller_meanest.py
src/art/: __init__.py  bug_cli.py  bugs.py  describe.py  diagnosis.py  formal_tests.py  full_report.py  guion.py  identification.py  interventions.py  mcp_server.py  model_detection.py  pipeline.py  policy.py  roots.py  seasonal_detection.py
tests/: test_acf_contributions.py  test_bug_0001_mu_collapse.py  test_bug_0002_over_differencing.py  test_bug_0003_persist_pre_out.py  test_bug_0004_factor_se.py  test_bug_0005_nyquist.py  test_bug_0006_seasonal_seed.py  test_bug_0007_rebuild_refactor.py  test_bug_0008_forecast_band.py  test_compare_versions.py  test_dcd_crit_provenance.py  test_formal_tests.py  test_full_report.py  test_golden_pipeline.py  test_guion.py  test_identification.py  test_interventions.py  test_mcp_server.py  test_meg_hybrid_chile.py  test_multiplicative_seasonality.py  test_overpar.py  test_param_unpacker.py  test_policy.py  test_rescaling_invariant.py  test_seasonal_params.py  test_seasonal_simplification.py  test_unit_root.py
tests/golden/: build_model_synth_b1.json  confirm_and_estimate_synth_b1.json  synth_b1_series.json
