[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "art-tseries"
version         = "0.1.0"
description     = "A time series identification and model-building toolkit (uses fue)"
requires-python = ">=3.10"
authors         = [
    { name = "David E. Guerrero", email = "davidesg@ucm.es" },
]
dependencies = [
    "fue>=0.1.2",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev  = ["pytest>=7"]

[project.scripts]
art-mcp = "art.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
