[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "art-tseries"
version         = "0.1.2"
description     = "Box-Jenkins-Treadway time series model-building toolkit + MCP server (uses fue and pyfug)"
readme          = "README.md"
license         = { text = "GPL-2.0-or-later" }
requires-python = ">=3.10"
authors         = [
    { name = "David E. Guerrero", email = "davidesg@ucm.es" },
]
keywords        = ["time series", "ARIMA", "Box-Jenkins", "Treadway", "MCP", "forecasting"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fue>=0.1.4",
    "pyfug>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev  = ["pytest>=7"]

[project.scripts]
art-mcp = "art.mcp_server:main"
art-bug = "art.bug_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
