[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "atsw"
version         = "1.0.4"
description     = "ATSW — A Time Series Workshop: the fue + pyfug + ART suite (exact-ML estimation, graphics, Box-Jenkins model-building) with an MCP server for LLM-driven analysis"
readme          = "README.md"
license         = { text = "GPL-2.0-or-later" }
requires-python = ">=3.10"
authors         = [
    { name = "David E. Guerrero", email = "davidesg@ucm.es" },
]
keywords        = ["time series", "ARIMA", "Box-Jenkins", "Treadway", "MCP", "suite"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
]

# Umbrella meta-package: no code of its own, just a compatible set of the suite
# components. `pip install atsw` installs the whole suite + the MCP server.
dependencies = [
    "fue>=0.1.8",          # estimation engine + FUF forecasting
    "pyfug>=2.0",          # Jenkins-Treadway graphics
    "art-tseries>=0.1.3",  # model building + MCP server (art-mcp)
]

[tool.setuptools]
# No packages — this distribution exists only to pull the suite together.
packages = []
