[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "atws"
version         = "1.0.0"
description     = "ATWS — Box-Jenkins-Treadway time series suite (fue + pyfug + ART/MCP)"
readme          = "README.md"
license         = { text = "GPL-2.0-or-later" }
requires-python = ">=3.10"
authors         = [
    { name = "David E. Guerrero", email = "davidesg@ucm.es" },
]
keywords        = ["time series", "ARIMA", "Box-Jenkins", "Treadway", "MCP", "suite"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
]

# Umbrella meta-package: no code of its own, just a compatible set of the suite
# components. `pip install atws` installs the whole suite + the MCP server.
dependencies = [
    "fue>=0.1.3",          # estimation engine + FUF forecasting
    "pyfug>=2.0",          # Jenkins-Treadway graphics
    "art-tseries>=0.1.0",  # model building + MCP server (art-mcp)
]

[tool.setuptools]
# No packages — this distribution exists only to pull the suite together.
packages = []
